syntax = "proto3";

package api;

import "models/account.proto";

service AccountService {
  rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse);
}

message ListAccountsRequest {
}

message ListAccountsResponse {
  repeated models.Account accounts = 1;
  int32 total_count = 2;
}
